Details
-
Bug
-
Status: Resolved
-
P3
-
Resolution: Fixed
-
17
-
b12
Description
Crashed on 1/17 nightly.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/share/compiler/oopMap.cpp:311), pid=38912, tid=46348
# guarantee(loc != NULL) failed: missing saved register
#
# JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc.jenkins.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc.jenkins.jdk-jdk, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x137f11b] OopMapSet::all_do(frame const*, RegisterMap const*, OopClosure*, void (*)(oop*, oop*, OopClosure*), OopClosure*)+0x4db
#
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/share/compiler/oopMap.cpp:311), pid=38912, tid=46348
# guarantee(loc != NULL) failed: missing saved register
#
# JRE version: OpenJDK Runtime Environment (17.0) (fastdebug build 17-internal+0-adhoc.jenkins.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17-internal+0-adhoc.jenkins.jdk-jdk, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x137f11b] OopMapSet::all_do(frame const*, RegisterMap const*, OopClosure*, void (*)(oop*, oop*, OopClosure*), OopClosure*)+0x4db
#
Attachments
Issue Links
- duplicates
-
JDK-8255901 Do not require RBP to be saved in JavaFrameAnchor
-
- Closed
-
-
JDK-8261239 Upstream 8258238: Some jextract samples crash with: "updating map that does not need updating"
-
- Resolved
-
- relates to
-
JDK-8262819 gc/shenandoah/compiler/TestLinkToNativeRBP.java fails with release VMs
-
- Resolved
-
-
JDK-8262849 Shenandoah: TestLinkToNativeRBP.java test misses UnlockDiagnosticVMOptions flag
-
- Closed
-
(1 links to)