src/hotspot/share/opto/compile.hpp
@@ -388,7 +388,7 @@ class Compile : public Phase {
   int                           _late_inlines_pos;    // Where in the queue should the next late inlining candidate go (emulate depth first inlining)
   uint                          _number_of_mh_late_inlines; // number of method handle late inlining still pending
 
-  GrowableArray<BufferBlob*>    _native_invokers;
+  GrowableArray<RuntimeStub*>   _native_invokers;
 
   // Inlining may not happen in parse order which would make
   // PrintInlining output confusing. Keep track of PrintInlining
@@ -951,9 +951,9 @@ class Compile : public Phase {
     _vector_reboxing_late_inlines.push(cg);
   }
 
-  void add_native_invoker(BufferBlob* stub);
+  void add_native_invoker(RuntimeStub* stub);
 
-  const GrowableArray<BufferBlob*>& native_invokers() const { return _native_invokers; }
+  const GrowableArray<RuntimeStub*> native_invokers() const { return _native_invokers; }
 
   void remove_useless_nodes       (GrowableArray<Node*>&        node_list, Unique_Node_List &useful);
 
